force-app/main/default/objects/order_line__c/order_line__c.object-meta.xml
<CustomObject>
    <label>Order Line (Old)</label>
    <nameField>
        <displayFormat>OL-{00000000}</displayFormat>
        <label>Order Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Lines (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>