force-app/main/default/objects/order_line__c/fields/AirlineCode__c.field-meta.xml
<CustomField>
    <fullName>AirlineCode__c</fullName>
    <formula>PNR__r.GoverningCarrier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AirlineCode</label>
    <type>Text</type>
</CustomField>