force-app/main/default/objects/order_line__c/fields/Amount_Payable_Inc_HSS__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable_Inc_HSS__c</fullName>
    <formula>HSS_Cost__c  +  Nett_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Payable Inc HSS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>