force-app/main/default/objects/order_line__c/fields/Cancel__c.field-meta.xml
<CustomField>
    <fullName>Cancel__c</fullName>
    <label>Cancel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Credit-Same Merchant</fullName>
            </value>
            <value>
                <fullName>Merchant not paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>