force-app/main/default/objects/order_line__c/fields/Cancel_Fee_Pax_Order__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Fee_Pax_Order__c</fullName>
    <label>Cancel Fee Pax/Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAX</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>