force-app/main/default/objects/order_line__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>