force-app/main/default/objects/order_line__c/fields/Fare_Tax_Applicatble__c.field-meta.xml
<CustomField>
    <fullName>Fare_Tax_Applicatble__c</fullName>
    <label>Fare/Tax Applicatble</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>