force-app/main/default/objects/order_line__c/fields/Flights_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Flights_Cancelled__c</fullName>
    <formula>order__r.Flights_Cancelled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flights Cancelled</label>
    <type>Checkbox</type>
</CustomField>