force-app/main/default/objects/order_line__c/fields/Max_Cost__c.field-meta.xml
<CustomField>
    <fullName>Max_Cost__c</fullName>
    <formula>Component__r.Max_Component_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>