force-app/main/default/objects/order_line__c/fields/Nett_Cost__c.field-meta.xml
<CustomField>
    <fullName>Nett_Cost__c</fullName>
    <label>Nett Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>