force-app/main/default/objects/order_line__c/fields/PAX_Travelling__c.field-meta.xml
<CustomField>
    <fullName>PAX_Travelling__c</fullName>
    <label>Order PAX Travelling</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>