force-app/main/default/objects/order_line__c/fields/PAXTravelling_FromOrder__c.field-meta.xml
<CustomField>
    <fullName>PAXTravelling_FromOrder__c</fullName>
    <formula>IF( Component_Type__c =&apos;Flight&apos; ,  order__r.PAX_Travelling__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAXTravelling(FromOrder)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>