force-app/main/default/objects/order_line__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNR</label>
    <referenceTo>PNR__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>