force-app/main/default/objects/order_line__c/fields/PrePayment__c.field-meta.xml
<CustomField>
    <fullName>PrePayment__c</fullName>
    <label>PrePayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>