force-app/main/default/objects/order_line__c/fields/Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Reschedule__c</fullName>
    <label>Reschedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>