force-app/main/default/objects/order_line__c/fields/Travel_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_By_Date__c</fullName>
    <label>Travel By Date</label>
    <type>Date</type>
</CustomField>