force-app/main/default/objects/order_line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Component_Name__c</columns>
    <columns>Component_Pricing__c</columns>
    <columns>Component__c</columns>
    <columns>order__c</columns>
    <columns>Cost_AUD__c</columns>
    <columns>Nett_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>